CSMART Release Notes

Release 10.3:
This patch release includes updates to various 1AD configurations, and
related changes to database table definitions.

- Removed the domain data file Domain_MySQL.zip.  This file 
  contained a sql script which loaded domain
  data into the csmart configuration database.  This data
  has been made into separate .csv files which are now loaded
  simultaneously with the csmart configuration database via the
  load script ./load_1ad_mysql.sh[bat]. 

Release 10.2:
This is a minor patch release, preparing for future work.

- Disabled the Society Monitor's Topology view. It used the old
  Topology service, which is being removed.
- Began work on support for viewing XML society definitions.
- Moved CSMART related .q files to csmart/data/common. The preferred
  location for recipeQueries.q is now csmart/data/common. However,
  files in the old CIP/configs/common _will_ still be found.
- Provide new -D argument specifying to explicitly load components from the
  CSMART database at runtime. Note that DB exports that preserve the
  -D arguments but want to run from files should remove or change that
  argument.
- Added new database dump: refconfigdb.zip. This file includes the 1AD
  oplan and OrgAssets as reference data, as well as the 1AD Domain
  data contained in the other local dump. Use this as the definition
  of the org.cougaar.refconfig database when running 1AD societies
  from XML files. See configs/ul/Readme.txt. See also the added /new 
  directory for table definition files, and the associated Readme.

Release 10.0:
This is a major Cougaar release, incorporating all previous fixes plus
some major code cleanup, in preparation for this year's
changes. Database definition files have been updated and should be
reloaded, in particular to reflect the obsolesence of ClusterIdentifier.

- Removed old csmart/bin/build.xml Ant script. Instead use generated
  Ant build script in csmart/build.xml. Targets are identical, but