@@ -4,12 +4,17 @@ Release 10.3:
 This patch release includes updates to various 1AD configurations, and
 related changes to database table definitions.
 
-- Removed the domain data file Domain_MySQL.zip.  This file 
-  contained a sql script which loaded domain
+- Removed the domain data file CIP/csmart/data/database/Domain_MySQL.zip. 
+  This file contained a sql script which loaded domain
   data into the csmart configuration database.  This data
   has been made into separate .csv files which are now loaded
   simultaneously with the csmart configuration database via the
   load script ./load_1ad_mysql.sh[bat]. 
+- Added new database loading script 'load_1ad_all.sh[bat]' which
+  loads the domain data from CIP/dbms/data/mysql/1ADDomainData.sql
+  as well as the configuration database.  This script takes an
+  additional parameter which is the name of the domain database
+  to be loaded.
 
 Release 10.2:
 This is a minor patch release, preparing for future work.
